==> jnaulet/OpenPicoRTOS/staging/drivers/can/can-pic32mx.c <==
#include "can-pic32mx.h"
#include "picoRTOS.h"
#include <stdint.h>
#include "misc-pic32mx.h"
#define CAN_PIC32MX_RXM_COUNT 4
#define CAN_PIC32MX_FLTCON_COUNT 8
#define OPMOD_NORMAL      0x0
#define OPMOD_DISABLE     0x1
#define OPMOD_LOOPBACK    0x2
#define OPMOD_LISTEN_ONLY 0x3
#define OPMOD_CONFIG      0x4
#define OPMOD_LISTEN_ALL  0x7
#define CiCON_ABAT     (1 << 27)
#define CiCON_REQOP_M  0x7u
#define CiCON_REQOP(x) (((x) & CiCON_REQOP_M) << 24)
#define CiCON_OPMOD_M  0x7u
#define CiCON_OPMOD(x) (((x) & CiCON_OPMOD_M) << 21)
#define CiCON_CANCAP   (1 << 20)
#define CiCON_ON       (1 << 15)
#define CiCON_SIDLE    (1 << 13)
#define CiCON_CANBUSY  (1 << 11)
#define CiCON_DNCNT_M  0xfu
#define CiCON_DNCNT(x) ((x) & CiCON_DNCNT_M)
#define CiCFG_WAKFIL    (1 << 22)
#define CiCFG_SEG2PH_M  0x7u
#define CiCFG_SEG2PH(x) (((x) & CiCFG_SEG2PH_M) << 16)
#define CiCFG_SEG2PHTS  (1 << 15)
#define CiCFG_SAM       (1 << 14)
#define CiCFG_SEG1PH_M  0x7u
#define CiCFG_SEG1PH(x) (((x) & CiCFG_SEG1PH_M) << 11)
#define CiCFG_PRSEG_M   0x7u
#define CiCFG_PRSEG(x)  (((x) & CiCFG_PRSEG_M) << 8)
#define CiCFG_SJW_M     0x3u
#define CiCFG_SJW(x)    (((x) & CiCFG_SJW_M) << 6)
#define CiCFG_BRP_M     0x3fu
#define CiCFG_BRP(x)    ((x) & CiCFG_BRP_M)
#define CiINT_IVRIE  (1 << 31)
#define CiINT_WAKIE  (1 << 30)
#define CiINT_CERRIE (1 << 29)
#define CiINT_SERRIE (1 << 28)
#define CiINT_RBOVIE (1 << 27)
#define CiINT_MODIE  (1 << 19)
#define CiINT_CTMRIE (1 << 18)
#define CiINT_RBIE   (1 << 17)

static int set_bitrate(struct can *ctx, unsigned long bitrate)
{
    if (!picoRTOS_assert(bitrate > 0)) return -EINVAL;

    size_t brp;
    clock_freq_t freq;

    if ((freq = clock_get_freq(ctx->clkid)) < 0)
        return (int)freq;

    if (!picoRTOS_assert(((unsigned long)freq % bitrate) == 0))
        return -EIO;

    /* start iterative detection of params */
    for (brp = (size_t)1; brp <= (size_t)(CiCFG_BRP_M + 1u); brp++) {
        size_t tq_div = (brp * (size_t)bitrate) * (size_t)2;
        size_t tq = (size_t)freq / tq_div;

        /* check for accuracy */
        if (((size_t)freq % tq_div) != 0)
            continue;

        /* ignore out of bounds values */
        if (tq < (size_t)TQ_MIN || tq > (size_t)TQ_MAX)
            continue;

        /* set values */
        if (set_brp_and_segs(ctx, brp, tq) == 0)
            return 0;
    }

    picoRTOS_break();
    /*@notreached@*/
    return -EINVAL;
}

int can_setup(struct can *ctx, struct can_settings *settings)
{
    if (!picoRTOS_assert(settings->tx_mailbox_count <
                         (size_t)CAN_PIC32MX_FIFO_COUNT)) return -EINVAL;
    int res;

    /* set config mode */
    if ((res = set_opmod_busywait(ctx, (uint32_t)OPMOD_CONFIG)) < 0)
        return res;

    if ((res = set_bitrate(ctx, settings->bitrate)) < 0)
        return res;

    if ((res = set_tx_mailboxes(ctx, settings->tx_mailbox_count)) < 0)
        return res;

    ctx->tx_auto_abort = settings->tx_auto_abort;
    ctx->rx_overwrite = settings->rx_overwrite;

    /* back to normal (or loopback) */
    if (settings->loopback) {
        ctx->opmod = (uint32_t)OPMOD_LOOPBACK;
        return set_opmod_busywait(ctx, (uint32_t)OPMOD_LOOPBACK);
    }

    ctx->opmod = (uint32_t)OPMOD_NORMAL;
    return set_opmod_busywait(ctx, (uint32_t)OPMOD_NORMAL);
}

int can_accept(struct can *ctx, can_id_t id, can_id_t accept_mask)
{
    if (!picoRTOS_assert(id < (can_id_t)CAN_EXTID_COUNT)) return -EINVAL;
    if (!picoRTOS_assert(accept_mask < (can_id_t)CAN_EXTID_COUNT)) return -EINVAL;
    if (!picoRTOS_assert(ctx->rxf_count < (size_t)CAN_PIC32MX_FIFO_COUNT)) return -ENOMEM;

    int res;

    /* look for mask */
    if ((res = find_acceptance_mask(ctx, accept_mask)) < 0) {
        /* not found, try to allocate it */
        if ((res = allocate_acceptance_mask(ctx, accept_mask)) < 0)
            return res;
    }

    /* set fifo id while FLTENn = 0 */
    ctx->base->CiRXFn[ctx->rxf_count].REG = (uint32_t)CiRXFn_SID(id);
    if ((res = setup_filter(ctx, (size_t)res, ctx->rxf_count)) < 0)
        return res;

    ctx->rxf_count++;
    return 0;
}

static int transfer_tx_mailbox(struct can *ctx, size_t index,
                               can_id_t id, const void *buf, size_t n)
{
    if (!picoRTOS_assert(index < (size_t)CAN_PIC32MX_FIFO_COUNT)) return -EINVAL;
    if (!picoRTOS_assert(id < (can_id_t)CAN_EXTID_COUNT)) return -EINVAL;
    if (!picoRTOS_assert(n > 0)) return -EINVAL;
    if (!picoRTOS_assert(n <= (size_t)CAN_DATA_COUNT)) return -EINVAL;

    const uint8_t *buf8 = (const uint8_t*)buf;
    struct CAN_PIC32MX_MB *mb = CAN_PIC32MX_MB_BY_INDEX(ctx, index);

    /* FIFO is full */
    if ((ctx->base->CiFIFO[index].INT.REG & CiFIFOINTn_TXNFULLIF) == 0) {
        ctx->base->CiFIFO[index].CON.SET = (uint32_t)CiFIFOCONn_TXREQ;
        /* TODO: auto abort ? Problem: you can only abort all pending tx messages */
        return -EAGAIN;
    }

    /* reset buffer */
    mb->CMSGDATA0 = 0;
    mb->CMSGDATA1 = 0;

    switch (n) {
    case 8: mb->CMSGDATA1 |= (uint32_t)buf8[7] << 0;    /*@fallthrough@*/
    case 7: mb->CMSGDATA1 |= (uint32_t)buf8[6] << 8;    /*@fallthrough@*/
    case 6: mb->CMSGDATA1 |= (uint32_t)buf8[5] << 16;   /*@fallthrough@*/
    case 5: mb->CMSGDATA1 |= (uint32_t)buf8[4] << 24;   /*@fallthrough@*/
    case 4: mb->CMSGDATA0 |= (uint32_t)buf8[3] << 0;    /*@fallthrough@*/
    case 3: mb->CMSGDATA0 |= (uint32_t)buf8[2] << 8;    /*@fallthrough@*/
    case 2: mb->CMSGDATA0 |= (uint32_t)buf8[1] << 16;   /*@fallthrough@*/
    case 1: mb->CMSGDATA0 |= (uint32_t)buf8[0] << 24; break;
    default:
        picoRTOS_break();
        /*@notreached@*/
        return -EIO;
    }

    /* only 11bit can for now */
    mb->CMSGID = (uint32_t)CMSGID_SID(id);
    mb->CMSGEID = (uint32_t)CMSGEID_DLC(n);

    /* start xfer */
    ctx->base->CiFIFO[index].CON.SET = (uint32_t)CiFIFOCONn_UINC;
    ctx->base->CiFIFO[index].CON.SET = (uint32_t)CiFIFOCONn_TXREQ;

    return (int)n;
}

int can_write(struct can *ctx, can_id_t id, const void *buf, size_t n)
{
    if (!picoRTOS_assert(id < (can_id_t)CAN_EXTID_COUNT)) return -EINVAL;
    if (!picoRTOS_assert(n > 0)) return -EINVAL;
    if (!picoRTOS_assert(n <= (size_t)CAN_DATA_COUNT)) return -EINVAL;

    /* get next index */
    size_t index = ctx->rx_mailbox_count + ctx->tx_mailbox_index;

    /* compute next index & transfer */
    ctx->tx_mailbox_index = (ctx->tx_mailbox_index + 1) % ctx->tx_mailbox_count;
    return transfer_tx_mailbox(ctx, index, id, buf, n);
}

static int transfer_rx_mailbox(struct can *ctx, size_t index,
                               can_id_t *id, void *buf, size_t n)
{
    if (!picoRTOS_assert(index < (size_t)CAN_PIC32MX_FIFO_COUNT)) return -EINVAL;
    if (!picoRTOS_assert(n > 0)) return -EINVAL;
    if (!picoRTOS_assert(n <= (size_t)CAN_DATA_COUNT)) return -EINVAL;

    uint8_t *buf8 = (uint8_t*)buf;
    struct CAN_PIC32MX_MB *mb = CAN_PIC32MX_MB_BY_INDEX(ctx, index);

    /* check if data is available */
    if ((ctx->base->CiFIFO[index].INT.REG & CiFIFOINTn_RXNEMPTYIF) == 0)
        return -EAGAIN;

    switch (n) {
    case 8: buf8[7] = (uint8_t)(mb->CMSGDATA1 >> 0);    /*@fallthrough@*/
    case 7: buf8[6] = (uint8_t)(mb->CMSGDATA1 >> 8);    /*@fallthrough@*/
    case 6: buf8[5] = (uint8_t)(mb->CMSGDATA1 >> 16);   /*@fallthrough@*/
    case 5: buf8[4] = (uint8_t)(mb->CMSGDATA1 >> 24);   /*@fallthrough@*/
    case 4: buf8[3] = (uint8_t)(mb->CMSGDATA0 >> 0);    /*@fallthrough@*/
    case 3: buf8[2] = (uint8_t)(mb->CMSGDATA0 >> 8);    /*@fallthrough@*/
    case 2: buf8[1] = (uint8_t)(mb->CMSGDATA0 >> 16);   /*@fallthrough@*/
    case 1: buf8[0] = (uint8_t)(mb->CMSGDATA0 >> 24); break;
    default:
        picoRTOS_break();
        /*@notreached@*/
        return -EIO;
    }

    /* get id & dlc */
    *id = (can_id_t)(mb->CMSGID & CMSGID_SID_M);
    n = (size_t)(mb->CMSGEID & CMSGEID_DLC_M);

    /* mark as processed */
    ctx->base->CiFIFO[index].CON.SET = (uint32_t)CiFIFOCONn_UINC;
    return (int)n;
}
